<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2C2C"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="360dp"
        android:layout_height="105dp"
        android:background="@drawable/text"
        android:gravity="end"
        android:paddingTop="40dp"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="50sp">

    </TextView>

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="360dp"
        android:layout_height="105dp"
        android:layout_below="@+id/textViewNumber"
        android:background="@drawable/text"
        android:gravity="end"
        android:paddingTop="40dp"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="50sp">

    </TextView>


    <Button
        android:id="@+id/buttonClear"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_below="@+id/textViewAnswer"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/button"
        android:text="@string/ac"
        android:textColor="#FFEB3B"
        android:textSize="35sp">

    </Button>

    <Button
        android:id="@+id/backSpace"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_below="@+id/textViewAnswer"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/buttonClear"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_baseline_backspace_24"
        android:drawableTint="#FFEB3B"
        android:gravity="center_horizontal|top"
        android:paddingStart="35dp"
        android:textSize="35sp"
        tools:ignore="RtlSymmetry"></Button>

    <Button
        android:id="@+id/buttonPercent"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_below="@+id/textViewAnswer"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/backSpace"

        android:background="@drawable/button"
        android:text="@string/mod"
        android:textColor="@color/colorAccent"
        android:textSize="35sp">

    </Button>

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="90dp"
        android:layout_height="88dp"
        android:layout_below="@+id/textViewAnswer"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/buttonPercent"
        android:background="@drawable/button"
        android:text="@string/devided"
        android:textColor="@color/colorAccent"
        android:textSize="35sp">

    </Button>

    <Button
        android:id="@+id/button9"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/buttonClear"
        android:layout_marginBottom="2dp"
        android:background="@drawable/button"
        android:text="@string/_9"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/button8"
        android:layout_width="88dp"
        android:layout_height="86dp"

        android:layout_below="@+id/backSpace"

        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/buttonClear"
        android:background="@drawable/button"
        android:text="@string/_8"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/button7"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/buttonPercent"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/backSpace"
        android:background="@drawable/button"
        android:text="@string/_7"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="90dp"
        android:layout_height="86dp"
        android:layout_below="@+id/buttonDivide"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/buttonPercent"
        android:background="@drawable/button"
        android:text="@string/mult"
        android:textColor="@color/colorAccent"
        android:textSize="35sp">

    </Button>

    <Button
        android:id="@+id/button6"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button9"
        android:layout_marginBottom="2dp"
        android:background="@drawable/button"
        android:text="@string/_6"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/button5"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button8"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/buttonClear"
        android:background="@drawable/button"
        android:text="@string/_5"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button7"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/backSpace"
        android:background="@drawable/button"
        android:text="@string/_4"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/buttonSubtact"
        android:layout_width="90dp"
        android:layout_height="86dp"
        android:layout_below="@+id/buttonMultiply"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/buttonPercent"
        android:background="@drawable/button"

        android:text="@string/minus"
        android:textColor="@color/colorAccent"
        android:textSize="35sp">

    </Button>

    <Button
        android:id="@+id/button3"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button6"
        android:layout_marginBottom="2dp"
        android:background="@drawable/button"
        android:text="@string/_3"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button5"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/buttonClear"
        android:background="@drawable/button"
        android:text="@string/_2"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/button1"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button4"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/backSpace"
        android:background="@drawable/button"
        android:text="@string/_1"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="90dp"
        android:layout_height="86dp"
        android:layout_below="@+id/buttonSubtact"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@+id/buttonPercent"
        android:background="@drawable/button"
        android:text="@string/sum"
        android:textColor="@color/colorAccent"
        android:textSize="35sp">

    </Button>

    <Button
        android:id="@+id/button0"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button3"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button"
        android:text="@string/_0"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button2"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@+id/buttonPI"

        android:background="@drawable/button"
        android:text="@string/dot"
        android:textColor="#ffffff"
        android:textSize="35sp">

    </Button>

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="90dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button1"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@+id/buttonDot"
        android:background="@drawable/button"
        android:text="@string/equal"
        android:textColor="#FF5722"
        android:textSize="35sp">

    </Button>

    <Button
        android:id="@+id/buttonPI"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_below="@+id/button1"
        android:layout_toEndOf="@+id/button0"
        android:background="@drawable/button"
        android:text="@string/PI"
        android:textColor="#ffffff"
        android:textSize="30sp">

    </Button>


</RelativeLayout>
